--- a/widgetset.css
+++ b/widgetset.css
@@ -9,8 +9,17 @@
 # ANY WARRANTY. See the GNU General Public License for more details.          #
 */
 
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+}
+
 .panel {
     text-align: center;
+    border: 1px solid white;
 }
 
 .panel>p {
@@ -235,6 +244,6 @@ li.filename {
     background: url(file.png) left top no-repeat;
 }
 
-#parentfolder {
+li.parentfolder {
     background: url(uparrow.png) left top no-repeat;
 }
