--- a/demo.css
+++ b/demo.css
@@ -1,4 +1,11 @@
+html {
+    height: 100%;
+    margin: 0px;
+}
+
 body {
+    min-height: 100%;
+    margin: 0px;
     font-family: arial, sans-serif;
     font-size: 2.5vmin;
 }
@@ -8,17 +15,46 @@ h1 {
     margin-top: 0px;
 }
 
+.notebook {
+    height: 100%;
+}
+
+.notebooktabrow {
+    background-color: oldlace;
+}
+
 .notebookpage {
     height: 90vh;
     padding: 2.5vh;
 }
 
+.panel {
+    text-align: center;
+}
+
 #panel1, #panel2 {
     width: 50%;
+    height: 75vh;
 }
 
 .paneltitle {
+    margin: 0.5vmin;
     font-weight: bold;
+}
+
+.listbox {
+    width: 25vw;
+    font-size: 1em;
+}
+
+#spinner {
+    display: inline-block;
+    background-color: lightgrey;
+    margin: 0.5vmin;
+}
+
+.dropdown {
+    font-size: 1em;
 }
 
 textarea {
@@ -29,12 +65,20 @@ textarea {
 }
 
 #usertext {
-    height: 25vmin;
+    height: 25vh;
+    width: 25vw
 }
 
-#spinner {
-    background-color: lightgrey;
-    margin: 0.5vmin;
+.button, .imagebutton, .togglebutton {
+    font-size: 1em;
+    padding: 0px;
+    margin: 0.5vmin 2vmin;
 }
 
+.imagebutton > img {
+    height: 5vmin;
+}
 
+p {
+    margin: 1vmin 0;
+}
